--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     # See: https://grafana.com/docs/grafana/latest/setup-grafana/configure-docker/
     volumes:
       - ./grafana/data:/var/lib/grafana
-      - ./grafana/config/provisioning:/etc/grafana/provisioning
+      - ./grafana/config:/etc/grafana
       - ./grafana/logs:/var/log/grafana
 
   prometheus:
