--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,6 @@ services:
 
   grafana:
     container_name: grafana
-
-    # See: https://grafana.com/docs/grafana/latest/setup-grafana/configure-grafana/#override-configuration-with-environment-variables
-    environment:
-      - GF_LOG_MODE=console file
-      - GF_ANALYTICS_REPORTING_ENABLED=false
-      - GF_ANALYTICS_CHECK_FOR_UPDATES=true
-      - GF_ANALYTICS_CHECK_FOR_PLUGIN_UPDATES=true
     image: grafana/grafana:latest
     networks:
       loki: null
@@ -76,24 +69,24 @@ services:
     volumes:
     - ./promtail/config/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
 
-  syslog-ng:
-    command: -edv
-    container_name: syslog-ng
-    depends_on:
-    - promtail
-    image: balabit/syslog-ng:latest
-    networks:
-      loki: null
-    ports:
-    - protocol: udp
-      published: 514
-      target: 514
-    - protocol: tcp
-      published: 601
-      target: 601
-    restart: always
-    volumes:
-    - ./syslog-ng/config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+#  syslog-ng:
+#    command: -edv
+#    container_name: syslog-ng
+#    depends_on:
+#    - promtail
+#    image: balabit/syslog-ng:latest
+#    networks:
+#      loki: null
+#    ports:
+#    - protocol: udp
+#      published: 514
+#      target: 514
+#    - protocol: tcp
+#      published: 601
+#      target: 601
+#    restart: always
+#    volumes:
+#    - ./syslog-ng/config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
 
   node-exporter:
     volumes:
@@ -129,7 +122,7 @@ services:
 
   cadvisor:
     container_name: cadvisor
-    image: gcr.io/cadvisor/cadvisor:latest
+    image: gcr.io/cadvisor/cadvisor:v0.47.0
     networks:
       loki: null
     ports:
